[project]
name = "steady"
version = "0.1.0"
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "netcdf4",
    "h5netcdf",
    "cartopy",
    "scipy",
    "matplotlib",
    "pytest"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["steady"]